# gelatolab

./: .env.example  .gitignore  LICENSE  TAURI.md  capacitor.config.json  detener.bat  index.html  iniciar.bat  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.setup.js
.claude/commands/: usability-review.md
.github/workflows/: ci.yml  deploy.yml  release-desktop.yml  supabase-keepalive.yml
docs/: architecture.md  auditoria-legal-2026-05-11.md  auditoria-legal-gaps-2026-05-11.md
docs/onboarding/: folleto.html  folleto.md  video-storyboard.md
docs/usability-survey/: heuristic-evaluation.md  research-plan.md  survey.md  test-tasks.md
public/: CNAME  manifest.json  robots.txt  sitemap.xml  sw.js
scripts/: capture-screenshots.mjs  crop-ai-watermark.py  gen-icons.cjs  generate-icons.html  generate-pwa-icons.mjs  prepare-icon-master.mjs  recover-missing.cjs  refactor-i18n.cjs  split-i18n.cjs
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AdminLayout.jsx  AiKeyModal.jsx  AllergensEditor.jsx  AnalysisCharts.jsx  AnalysisPanel.jsx  BackupReminder.jsx  BalancePanel.jsx  BarcodeScannerModal.jsx  BatchRating.jsx  BusinessSettingsModal.jsx  CloudSyncProvider.jsx  ConfirmProductionModal.jsx  CookieBanner.jsx  CountrySelector.jsx  DesktopWelcome.jsx  DiagnosticPanel.jsx  ErrorBoundary.jsx  Footer.jsx  FreezingCurve.jsx  GelatoParams.jsx  HelpAssistant.jsx  InventoryModal.jsx  InventoryModal.test.jsx  LabelingPanel.jsx  Logo.jsx  MachineVolumeWarning.jsx  MarcoAvatar.jsx  MobileDesktopHint.jsx  NewRecipeMenu.jsx  NotFound.jsx  NumberInput.jsx  NutritionalPanel.jsx  Onboarding.jsx  OnboardingWizard.jsx  PinPromptModal.jsx  ProGate.jsx  ProcessTab.jsx  ProductionCalendar.jsx  ProtectedRoute.jsx  RecipeCard.jsx  (+15 more)
src/data/: helpContent.js  ingredients.json  machines.js  recipes.json  templates.json
src/lib/: admin.js  ai.js  analytics.js  authStorage.js  backup.js  barcode.js  barcodeMap.js  barcodeMap.test.js  cloudSync.js  countryRegulations.js  desktopUpdate.js  entitlement.js  errorLog.js  folderBackup.js  format.js  helpSearch.js  hooks.js  i18n.js  icecreamCalc.js  icecreamCalc.test.js  idbStorage.js  pinLock.js  platform.js  printHtml.js  recipeReport.js  supabase.js  uiHighlight.js  userDataExport.js  voice.js
src/pages/: AdminAuditLog.jsx  AdminDashboard.jsx  AdminUsers.jsx  Auth.jsx  BatchCalc.jsx  Dashboard.jsx  Download.jsx  Haccp.jsx  Haccp.test.jsx  Help.jsx  IngredientDB.jsx  Landing.jsx  Mobile.jsx  Pricing.jsx  Privacy.jsx  ProductionLog.jsx  ProductionPlan.jsx  RecipeEditor.jsx  Recipes.jsx  Refund.jsx  ResetPassword.jsx  Terms.jsx
src/store/: aiStore.js  appStore.js  authStore.js  businessStore.js  countryStore.js  haccpStore.js  haccpStore.test.js  ingredientStore.js  inventoryStore.js  planStore.js  (+6 more)
supabase/: SETUP.md  schema.sql
(+27 files in other folders)
