[package]
name = "gelatolab"
version = "1.0.21"
description = "GelatoLab — formulacion profesional de helado y gelato"
authors = ["GelatoLab"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "gelatolab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
# File-backed key-value store. Used as a fallback for the Supabase auth
# session because WebView2's localStorage gets wiped on some NSIS reinstalls
# / auto-updates, which logs the user out unexpectedly.
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solo Windows: API de Shell para forzar refresh del icon cache despues
# de un update. Sin esto, Windows muestra el icono viejo de la version
# anterior aun cuando el .exe nuevo tiene el icono correcto embebido.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
